--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,28 +24,14 @@ jobs:
       steps:
         - name: Checkout
           uses: actions/checkout@master
+        - name: Run CIScript
+          run: |
+            chmod +x CIScript.sh
+            sh CIScript.sh
+          shell: bash
         - name: Build and test
           run: |
             xcodebuild clean test -workspace MGExampleApp.xcworkspace -scheme MGExampleApp-Mock -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
             bash <(curl -s https://codecov.io/bash)
           env: 
            destination: ${{ matrix.destination }}
-  # This workflow contains a single job called "build"
-#   build:
-#     # The type of runner that the job will run on
-#     runs-on: macOS-latest
-
-#     # Steps represent a sequence of tasks that will be executed as part of the job
-#     steps:
-#       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-#       - uses: actions/checkout@v2
-
-#       # Runs a single command using the runners shell
-#       - name: Run a one-line script
-#         run: echo Hello, world!
-
-#       # Runs a set of commands using the runners shell
-#       - name: Run a multi-line script
-#         run: |
-#           echo Add other actions to build,
-#           echo test, and deploy your project.
