--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+MGExampleApp.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+.DS_Store
