--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
       steps:
         - name: Checkout
           uses: actions/checkout@master
-          with: xcode-version: '15.0'
+          with: 
+            xcode-version: '15.0'
         - name: Run CIScript
           run: |
             chmod +x CIScript.sh
