--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,12 @@ jobs:
           matrix:
             destination: ['platform=iOS Simulator,OS=16.2,name=iPhone 14']
       steps:
-        - name: Checkout
-          uses: actions/checkout@master
-          with: 
-            xcode-version: '15.0'
+        - uses: actions/checkout@master
+        - name: Xcode Select Version
+          uses: mobiledevops/xcode-select-version-action@v1
+          with:
+            xcode-select-version: 14.2
+        - run: xcodebuild -version 
         - name: Run CIScript
           run: |
             chmod +x CIScript.sh
